2017-09-07 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'UNKNOWN_EVENTS' table from the database.
	* Added a 'UNKNOWN_USER_AGENTS' table to the database.
	* Added a 'UNKNOWN_HOSTS' table to the database.
	* Added a 'List Unknow User Agents' dialog in whc(1).
	* Added a 'List Unknown Hosts' dialog' in whc(1).
	* Added a 'Show Unknown Host LogLine' dialog whc(1).
2017-09-21 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'HOSTS.IP_ADDRESS' field to the database.
	* Added an 'UNKNOWN_HOSTS.IP_ADDRESS' field to the database.
	* Incremented the database version to 3.
	* Implemented DNS lookups for hostnames and IP addresses.
	* Added indices on 'HOSTS' and 'UNKNOWN_HOSTS' tables.
	* Incremented the database version to 4.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Added logic to disable buttons until target items are in a selected
	state in whc(1).
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Added 'conf/logrotate-http-sample'.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'webhound.spec.in' that caused installation of
	the default configuration file to fail for the 'server' sub-package.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.1.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'qt-mysql' dependency to the 'server' sub-package.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'Edit Program' dialog in whc(1) that caused the
	'User Agent' field to fail to be blanked out when creating a new
	program entry.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.2.
2019-08-02 Fred Gleason <fredg@paravelsystems.com>
	* Made the 'List Hosts' dialog sortable.
2019-08-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the packag version to 0.6.3.