@@ -2,7 +2,7 @@
 //
 // whprocess(1) WebHound log processor
 //
-//   (C) Copyright 2017 Fred Gleason <fredg@paravelsystems.com>
+//   (C) Copyright 2017-2019 Fred Gleason <fredg@paravelsystems.com>
 //
 //   This program is free software; you can redistribute it and/or modify
 //   it under the terms of the GNU General Public License version 2 as
@@ -21,6 +21,7 @@
 #include <errno.h>
 #include <stdio.h>
 #include <stdlib.h>
+#include <syslog.h>
 
 #include <QCoreApplication>
 #include <QStringList>
@@ -36,12 +37,34 @@ MainObject::MainObject(QWidget *parent)
   FILE *f=NULL;
   char line[1024];
   int lineno=0;
+  wh_log_to_syslog=false;
 
   CmdSwitch *cmd=new CmdSwitch(qApp->argc(),qApp->argv(),"whprocess",VERSION,
 			       WHPROCESS_USAGE);
   if(cmd->keys()==0) {
     fprintf(stderr,"whprocess: no log specified\n");
     exit(1);
+  }
+  for(unsigned i=0;i<cmd->keys();i++) {
+    if(i==(cmd->keys()-1)) {
+      if(cmd->key(i).left(2)=="--") {
+	fprintf(stderr,"whprocess: no log specified\n");
+	LogToSyslog(LOG_ERR,"no log specified");
+	exit(1);
+      }
+      cmd->setProcessed(i,true);
+    }
+    if(cmd->key(i)=="--log-to-syslog") {
+      wh_log_to_syslog=true;
+      cmd->setProcessed(i,true);
+    }
+    if(!cmd->processed(i)) {
+      fprintf(stderr,"whprocess: unknown option \"%s\"\n",
+	      (const char *)cmd->key(i).toUtf8());
+      LogToSyslog(LOG_ERR,"unknown option \"%s\"",
+		  (const char *)cmd->key(i).toUtf8());
+      exit(1);
+    }
   }
   filename=cmd->key(cmd->keys()-1);
   delete cmd;
@@ -52,7 +75,9 @@ MainObject::MainObject(QWidget *parent)
   QString err_msg;
   wh_config=new Config();
   if(!wh_config->openDb(&err_msg,true)) {
-    fprintf(stderr,"unable to open database [%s]",
+    fprintf(stderr,"unable to open database [%s]\n",
+	    (const char *)err_msg.toUtf8());
+    LogToSyslog(LOG_ERR,"unable to open database [%s]",
 	    (const char *)err_msg.toUtf8());
     exit(1);
   }
@@ -61,14 +86,21 @@ MainObject::MainObject(QWidget *parent)
   // Process Logfile
   //
   if((f=fopen(filename.toUtf8(),"r"))==NULL) {
-    fprintf(stderr,"whprocess: %s\n",strerror(errno));
+    fprintf(stderr,"whprocess: unable to open logfile [%s]\n",strerror(errno));
+    LogToSyslog(LOG_ERR,"unable to open logfile \"%s\" [%s]\n",
+		(const char *)filename.toUtf8(),
+		strerror(errno));
     exit(1);
   }
   while(fgets(line,1024,f)!=NULL) {
     if(!ProcessLine(QString(line).trimmed())) {
       fprintf(stderr,"line %d: parser error [%s]\n",lineno+1,line);
+      LogToSyslog(LOG_WARNING,"line %d: parser error [%s]\n",lineno+1,line);
     }
   }
+
+  LogToSyslog(LOG_INFO,"processed \"%s\"",(const char *)filename.toUtf8());
+
   exit(0);
 }
 
@@ -100,6 +132,10 @@ bool MainObject::ProcessLine(const QString &line)
 	if(q1->first()) {
 	  if(q1->value(0).toDateTime()<clf->timestamp()) {
 	    sql=QString("update HOSTS set ")+
+	      "USER_AGENT_VERSION=\""+
+	      SqlQuery::escape(clf->userAgent(i)->version())+"\","+
+	      "USER_AGENT_OPTIONS=\""+
+	      SqlQuery::escape(clf->userAgent(i)->options().join("; "))+"\","+
 	      "LAST_SEEN=\""+
 	      clf->timestamp().toString("yyyy-MM-dd hh:mm:ss")+"\" where "+
 	      "(IP_ADDRESS=\""+SqlQuery::escape(clf->hostAddress().toString())+
@@ -181,6 +217,18 @@ bool MainObject::ProcessLine(const QString &line)
   }
   delete clf;
   return ret;
+}
+
+
+void MainObject::LogToSyslog(int priority,const char *fmt,...) const
+{
+  va_list args;
+
+  if(wh_log_to_syslog) {
+    va_start(args,fmt);
+    vsyslog(priority,fmt,args);
+    va_end(args);
+  }
 }
 
 
